--- a/mountains.html
+++ b/mountains.html
@@ -9,6 +9,7 @@
     <header></header>
     <main></main>
     <footer></footer>
+    <script src="scripts/mountains.js"></script>
     <script src="scripts/mountainData.js"></script>
 </body>
 </html>
