got filter by state working

--- a/parks.html
+++ b/parks.html
@@ -11,8 +11,8 @@
     <main>
         <p>States/Territories</p>
         <label for=""></label>
-        <select id="parksDrop">
-            <option value="">Select</option>
+        <select id="statesDrop">
+            <option value="">State</option>
         </select>
         <table id="parkTableData">
             <thead>
