--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div>
+            <nav>
+              <a href="parks.html">parks</a>
+              <a href="mountains.html">mountains</a>
+            </nav>
+          </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
