--- a/mountains.html
+++ b/mountains.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css">
-</head>
-<body>
-    <header></header>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css" />
+  </head>
+  <body>
+    <header>
+      <div>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="parks.html">Parks</a>
+        </nav>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
     <script src="scripts/mountains.js"></script>
     <script src="scripts/mountainData.js"></script>
-</body>
+  </body>
 </html>
