mountains page progress

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <div>
             <nav>
-              <a href="parks.html">parks</a>
-              <a href="mountains.html">mountains</a>
+              <a href="parks.html">Parks</a>
+              <a href="mountains.html">Mountains</a>
             </nav>
           </div>
     </header>
