--- a/parks.html
+++ b/parks.html
@@ -10,8 +10,8 @@
     <header>
         <div>
             <nav>
-              <a href="index.html">home</a>
-              <a href="mountains.html">mountains</a>
+              <a href="index.html">Home</a>
+              <a href="mountains.html">Mountains</a>
             </nav>
           </div>
     </header>
