--- a/mountains.html
+++ b/mountains.html
@@ -25,11 +25,12 @@
     </header>
     <main>
       <select id="mountainDrop">
-        <option value="select">Select...</option>
+        <option value="select">Pick Mountain</option>
       </select>
       <div id="mountainImageDiv"></div>
       <br />
       <div id="infoParagraphDiv"></div>
+      <div id="effortLevelParagraph"></div>
     </main>
     <footer></footer>
     <script src="scripts/mountainData.js"></script>
