--- a/parks.html
+++ b/parks.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>parks</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css" /> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css" />    
   </head>
   <body>
     <header>
-        <div>
-            <nav>
-              <a href="index.html">Home</a>
-              <a href="mountains.html">Mountains</a>
-            </nav>
-          </div>
+      <div>
+        <nav class=>
+          <a href="index.html">Home</a>
+          <a href="mountains.html">Mountains</a>
+        </nav>
+      </div>
     </header>
     <main>
       <div>
@@ -26,7 +26,7 @@
         <input type="radio" name="filter" id="allRadio" />
         <label for="all">All</label>
       </div>
-      <br>
+      <br />
       <p>States/Territories</p>
       <label for=""></label>
       <select id="locationDrop">
@@ -47,7 +47,9 @@
       </table>
     </main>
     <footer>
-        <a href="https://youtu.be/qqi-8nv5ngk?si=LzsiJ_WmGwkpA73Y" style="text-decoration: none; color: white;">on the radio</a>
+      <a href="https://youtu.be/qqi-8nv5ngk?si=LzsiJ_WmGwkpA73Y" style="text-decoration: none; color: white"
+        >on the radio</a
+      >
     </footer>
     <script src="scripts/locationData.js"></script>
     <script src="scripts/parkTypeData.js"></script>
