--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
       </div>
       <h1 class="text">Welcome to the Outdoors</h1>
       </div>
-      <h3>a little about us and what we do</h3>
+      <h3>A little about us and what we do</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ad laudantium nam aliquam ex enim excepturi
         ratione dolor omnis deleniti, molestias quae assumenda. Animi blanditiis ipsam ab obcaecati assumenda at
         sapiente libero quas debitis beatae, temporibus laboriosam possimus voluptatibus quidem impedit aut, cupiditate
         quos laudantium maxime ea rerum nemo. Commodi?
       </p>
-      <h3>our passion is nature</h3>
+      <h3>Our passion is nature</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo suscipit veniam quae deserunt, nostrum esse sequi
         unde! Consequatur hic recusandae quam optio nesciunt libero id voluptas doloribus, at soluta laboriosam!
       </p>
 
-      <h3>every dollar you spend plants one tree</h3>
+      <h3>Every dollar you spend plants one tree</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque non cupiditate asperiores dolorem,
         architecto commodi in atque, veritatis molestiae, dolore facere laborum ipsam? Minima quod quas earum saepe eius
