--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <p>find more like us</p>
         <p>legal</p>
         <p>forms</p>
+        <a href="https://youtu.be/tbNlMtqrYS0?si=ZMwhChZV9_iAx9bn" style="color: #FAF9F6;">500 Miles</a>
     </footer>
   </body>
 </html>
