--- a/mountains.html
+++ b/mountains.html
@@ -32,7 +32,10 @@
         <div id="infoParagraphDiv"></div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="https://youtu.be/TtFwqnaPqXY?si=OuE5uDv6j66PFH0K" style="color: #faf9f6;">Rocky Mountain High</a>
+      <a href="https://youtu.be/-C_3eYj-pOM?si=hCY5-R2eUyW04aPp" style="color: #faf9f6;">Aint No Mountain High Enough</a>
+    </footer>
     <script src="scripts/mountainData.js"></script>
     <script src="scripts/mountains.js"></script>
   </body>
