--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       body{
         background-color: #FAF9F6
       }
+      nav,a {
+        color: #1b2832;
+      }
     </style>
   </head>
   <body>
