--- a/mountains.html
+++ b/mountains.html
@@ -10,7 +10,10 @@
         background-color: #faf9f6;
       }
       img{
-        padding: 3rem;
+        padding-block: 1rem;
+      }
+      nav,a {
+        color: #1b2832;
       }
     </style>
   </head>
@@ -27,7 +30,7 @@
       <select id="mountainDrop">
         <option value="select">Select Mountain</option>
       </select>
-      <div class="container">
+      <div class="grid">
         <div id="mountainImageDiv"></div>
         <div id="infoParagraphDiv"></div>
       </div>
