--- a/parks.html
+++ b/parks.html
@@ -9,12 +9,15 @@
         body{
         background-color: #FAF9F6
       }
+      nav,a {
+        color: #1b2832;
+      }
     </style>    
   </head>
   <body>
     <header>
       <div>
-        <nav class=>
+        <nav>
           <a href="index.html">Home</a>
           <a href="mountains.html">Mountains</a>
         </nav>
