--- a/mountains.html
+++ b/mountains.html
@@ -30,7 +30,7 @@
       <select id="mountainDrop">
         <option value="select">Select Mountain</option>
       </select>
-      <div class="grid">
+      <div >
         <div id="mountainImageDiv"></div>
         <div id="infoParagraphDiv"></div>
       </div>
