the final product:)

--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
   </head>
   <body>
     <header>
-      <div>
-        <nav>
-          <a href="parks.html">Parks</a>
-          <a href="mountains.html">Mountains</a>
-        </nav>
-      </div>
+      <nav>
+        <ul>
+          <li><strong>Outdoors</strong></li>
+        </ul>
+        <ul>
+          <li><a href="mountains.html">Mountains</a></li>
+          <li><a href="parks.html">Parks</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
         <div class="container">
@@ -77,6 +80,7 @@
         <p>legal</p>
         <p>forms</p>
         <a href="https://youtu.be/tbNlMtqrYS0?si=ZMwhChZV9_iAx9bn" style="color: #FAF9F6;">500 Miles</a>
+        <a href="https://youtu.be/rbSY2Yx85Gk?si=ROurvme-JaEbhFP1" style="color: #FAF9F6;">wham-bam-shang-alang</a>
     </footer>
   </body>
 </html>
