--- a/parks.html
+++ b/parks.html
@@ -16,12 +16,15 @@
   </head>
   <body>
     <header>
-      <div>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="mountains.html">Mountains</a>
-        </nav>
-      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Outdoors</a></li>
+        </ul>
+        <ul>
+          <li><a href="mountains.html">Mountains</a></li>
+          <li><a href="parks.html">Parks</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <div>
